@@ -1,4 +1,5 @@
 Development
+	If mimetype is video/x-flv then mark the media as streaming
 	Version sync with gnome-mplayer
 	Handle more javascript methods, that allow setting callbacks on events
 	Make qtsrc locations work, makes some apple sites work
